# Generative-AI-PIAIC-Batch-63

Quarter 1/: read.me
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai)/: file.md
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai) - Islamabad/: file.md
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai) - Islamabad/crewai/src/crewai/: main.py
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai) - Islamabad/uv_project/src/uv_project/: hello.py
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai)/crewai/: README.md  pyproject.toml
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai)/gemini/: getting_started.py
Quarter 4 (Agentic AI Advanced)/class 8 (crew ai)/uv_project/: pyproject.toml
Quarter 4 (Agentic AI Advanced)/class 9 (crew ai) - Lahore/: docs.md
Quarter 4 (Agentic AI Advanced)/class 9 (crew ai) - Lahore/crew_project/: README.md  poem.txt  pyproject.toml
Quarter 4 (Agentic AI Advanced)/class 9 (crew ai) - Lahore/crew_project/src/crew_project/: main.py
