[project]
name = "uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Junaid-Nazir-828", email = "junaidnazir7501@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.59.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uv_project = "uv_project.hello:gemini"
