[project]
name = "crew_project"
version = "0.1.0"
description = "crew_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kickoff = "crew_project.main:kickoff"
plot = "crew_project.main:plot"

[tool.crewai]
type = "flow"
